--- a/Artemis.vcxproj
+++ b/Artemis.vcxproj
@@ -17,11 +17,13 @@
   <ItemGroup>
     <ClCompile Include="OS Window\main.cpp" />
     <ClCompile Include="OS Window\Window.cpp" />
+    <ClCompile Include="OS Window\WindowProcedure.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OS Window\main.h" />
     <ClInclude Include="OS Window\PrettyWin32.h" />
     <ClInclude Include="OS Window\Window.h" />
+    <ClInclude Include="OS Window\WindowProcedure.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
