--- a/Artemis.vcxproj
+++ b/Artemis.vcxproj
@@ -15,15 +15,17 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="OS Window\main.cpp" />
-    <ClCompile Include="OS Window\Window.cpp" />
-    <ClCompile Include="OS Window\WindowProcedure.cpp" />
+    <ClCompile Include="src\Main\main.cpp" />
+    <ClCompile Include="src\OS Window\Window.cpp" />
+    <ClCompile Include="src\OS Window\WindowProcedure.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="OS Window\main.h" />
-    <ClInclude Include="OS Window\PrettyWin32.h" />
-    <ClInclude Include="OS Window\Window.h" />
-    <ClInclude Include="OS Window\WindowProcedure.h" />
+    <ClInclude Include="src\ArtemisEngine.h" />
+    <ClInclude Include="src\Main\main.h" />
+    <ClInclude Include="src\Main\PrettyWin32.h" />
+    <ClInclude Include="src\OS Window\Window.h" />
+    <ClInclude Include="src\OS Window\WindowProcedure.h" />
+    <ClInclude Include="src\Structs\Color.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
