Added command line handling

--- a/Artemis.vcxproj
+++ b/Artemis.vcxproj
@@ -15,6 +15,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Main\ApplicationArguments.cpp" />
     <ClCompile Include="src\Structs\Color.cpp" />
     <ClCompile Include="src\Main\main.cpp" />
     <ClCompile Include="src\Windows\GameWindow.cpp" />
@@ -25,6 +26,7 @@
     <ClInclude Include="src\ArtemisEngine.h" />
     <ClInclude Include="src\Direct X\d3dx12.h" />
     <ClInclude Include="src\Direct X\DXHelper.h" />
+    <ClInclude Include="src\Main\ApplicationArguments.h" />
     <ClInclude Include="src\Structs\Color.h" />
     <ClInclude Include="src\Windows\GameWindow.h" />
     <ClInclude Include="src\Windows\Window.h" />
