--- a/Artemis.vcxproj.filters
+++ b/Artemis.vcxproj.filters
@@ -93,7 +93,7 @@
     <ClCompile Include="src\Exceptions\Exception.cpp">
       <Filter>Source Files\Exceptions</Filter>
     </ClCompile>
-    <ClCompile Include="CommandQueue.cpp">
+    <ClCompile Include="src\Direct X\CommandQueue.cpp">
       <Filter>Source Files\Direct X</Filter>
     </ClCompile>
   </ItemGroup>
@@ -134,7 +134,7 @@
     <ClInclude Include="src\Exceptions\Exceptions.h">
       <Filter>Header Files\Exceptions</Filter>
     </ClInclude>
-    <ClInclude Include="CommandQueue.h">
+    <ClInclude Include="src\Direct X\CommandQueue.h">
       <Filter>Header Files\Direct X</Filter>
     </ClInclude>
   </ItemGroup>
