Added depth buffer

--- a/Artemis.vcxproj
+++ b/Artemis.vcxproj
@@ -16,8 +16,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Direct X\CommandQueue.cpp" />
+    <ClCompile Include="src\Direct X\DepthBuffer.cpp" />
     <ClCompile Include="src\Direct X\GraphicsDevice.cpp" />
+    <ClCompile Include="src\Direct X\GraphicsResource.cpp" />
+    <ClCompile Include="src\Direct X\RenderTargetView.cpp" />
     <ClCompile Include="src\Direct X\SwapChain.cpp" />
+    <ClCompile Include="src\Direct X\Texture2D.cpp" />
     <ClCompile Include="src\Exceptions\Exception.cpp" />
     <ClCompile Include="src\Debug\Output.cpp" />
     <ClCompile Include="src\Input\Input.cpp" />
@@ -31,11 +35,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Direct X\CommandQueue.h" />
+    <ClInclude Include="src\Direct X\DepthBuffer.h" />
     <ClInclude Include="src\Direct X\DirectXHelper.h" />
     <ClInclude Include="src\Direct X\GraphicsDevice.h" />
+    <ClInclude Include="src\Direct X\GraphicsResource.h" />
+    <ClInclude Include="src\Direct X\RenderTargetView.h" />
     <ClInclude Include="src\Direct X\SwapChain.h" />
+    <ClInclude Include="src\Direct X\Texture2D.h" />
     <ClInclude Include="src\Exceptions\Exceptions.h" />
     <ClInclude Include="src\Debug\Output.h" />
+    <ClInclude Include="src\Exceptions\NullReferenceException.h" />
     <ClInclude Include="src\Input\Input.h" />
     <ClInclude Include="src\Input\Key.h" />
     <ClInclude Include="src\Main\ApplicationArguments.h" />
@@ -95,7 +104,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>d3d11.lib;d3dx11d.lib;D3DCompiler.lib;Effects11d.lib;dxerr.lib;dxgi.lib;dxguid.lib;DbgHelp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>dxgi.lib;d3d11.lib;d3dx11d.lib;D3DCompiler.lib;Effects11d.lib;dxerr.lib;dxgi.lib;dxguid.lib;DbgHelp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Temp|x64'">
